syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.Files";

message File {
    int32 id = 1;
    google.protobuf.Timestamp creationDate = 2;
    google.protobuf.Timestamp modificationDate = 3;
    int32 creationUserId = 4;
    int32 modificationUserId = 5;
    string name = 6;
    string contentType = 7;
    string url = 9;
    int32 groupId = 10;
}

message FilePageModel {
    repeated File pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}